--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>FOLIO &#8212 ©</h1>
         </div>
         <img src="assets/img/blue.jpeg" alt="blue silouette">
-        <p>DESIGNER & DEVELOPER</p>
+        <p><span>DESIGNER</span> & DEVELOPER</p>
     </header>
     <main>
     <!----------Release---------->
@@ -56,7 +56,7 @@
                         </tr>
                     </tbody>
                 </table>
-                 <!--SVG HERE-->
+                <img src="assets/img/letswork.svg">
             </article>
         </section>
     <!----------Works---------->
